@@ -877,7 +877,7 @@ Stelle dadurch sicher, dass die Versionsgeschichte eines Artikel historisch korr
 
 # Diffs
 'history-title'             => 'Versionsgeschichte von „$1“',
-'difference'                => '(Unterschied zwischen Versionen)',
+'difference-title'          => 'Versionsunterschied: „$1“',
 'loadingrev'                => 'Lade Versionen zur Unterscheidung',
 'lineno'                    => 'Zeile $1:',
 'editcurrent'               => 'Die aktuelle Version dieser Seite bearbeiten',
@@ -1040,6 +1040,7 @@ Nicht selektierte Gruppen werden nicht geändert. Eine Selektion kann mit '''Str
 'rc_categories_any'                 => 'Alle',
 'rc-change-size'                    => '$1 {{PLURAL:$1|Byte|Bytes}}',
 'newsectionsummary'                 => 'Neuer Abschnitt /* $1 */',
+'difference'                        => '(Unterschied zwischen Versionen)',
 
 # Recent changes linked
 'recentchangeslinked'          => 'Änderungen an verlinkten Seiten',
